[package]
name = "cargo-dylib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.11.6"
clap = { version = "3.2.22", features = ["derive", "cargo"] }
clap-cargo = "0.9.1"
escargot = "0.5.7"
exitcode = "1.1.2"
human-panic = "1.0.3"
indoc = "1.0.7"
rayon = "1.5.3"
serde = "1.0.144"
thiserror = "1.0.35"
toml = "0.5.9"
